--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -1,105 +1,44 @@
-
-/* Reset CSS */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-/* Body styling */
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-}
-
-/* Navbar styling */
-.navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #0366d6;
-    padding: 10px 20px;
-    color: white;
-}
-
-.navbar h1 {
-    margin: 0;
-}
-
-.navbar ul {
-    list-style: none;
-    display: flex;
-    gap: 20px;
-}
-
-.navbar a {
-    color: white;
-    text-decoration: none;
-    font-size: 16px;
-}
-
-.navbar a:hover {
-    text-decoration: underline;
-}
-
-/* Container for login form */
-.login-container {
-    background-color: #fff;
-    padding: 40px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 300px;
-    margin: 40px auto;
-    text-align: center;
-}
-
-/* Form title */
-.login-form h2 {
-    margin-bottom: 20px;
-    color: #333;
-}
-
-/* Input group styling */
-.input-group {
-    margin-bottom: 20px;
-    text-align: left;
-}
-
-/* Label styling */
-.input-group label {
-    display: block;
-    margin-bottom: 5px;
-    color: #555;
-}
-
-/* Input styling */
-.input-group input {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    font-size: 14px;
-    transition: border-color 0.3s;
-}
-
-.input-group input:focus {
-    border-color: #0366d6;
-    outline: none;
-}
-
-/* Button styling */
-button {
-    width: 100%;
-    padding: 10px;
-    background-color: #0366d6;
-    border: none;
-    border-radius: 4px;
-    color: white;
-    font-size: 16px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-}
-
-button:hover {
-    background-color: #024ea2;
-}
+nav {
+    background-color: #007bff; /* Gris */
+    }
+    
+    nav ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+    }
+    
+    nav ul li {
+      float: left;
+    }
+    
+    nav ul li a {
+      display: block;
+      color: white;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+      transition: background-color 0.3s; 
+    }
+    
+    nav ul li a:hover {
+      background-color: #0056b3; 
+    }
+  
+    .fade-in-out {
+      transition: opacity 01.20s ease;
+    }
+    
+    .fade-in-out.ng-enter,
+    .fade-in-out.ng-leave {
+      opacity: 0;
+    }
+    
+    .fade-in-out.ng-enter.ng-enter-active,
+    .fade-in-out.ng-leave {
+      opacity: 1;
+    }
+    .logout-link {
+        float: right;
+      }
